tests/examples/bad/invalid_method_type_inheritance.lat
int main() {
    return 1;
}

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    void f() {
        return ; 
    }
}